--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
         </form>
         <div id="funFact">
             <p>{{ funFact }}</p>
+            <p>{{ fact2 }}</p>
         </div>
 
     </body>
